# OWOI_AudioToClip

./: .gitignore  README.md  pyproject.toml
audio_to_clip/: ClipMakerFactory.py  GetImageFromGoogle.py  TranscriptFactory.py  WordTimestamp.py  montagevideo.py
owoi_audio_to_clip/: ClipMakerFactory.py  TranscriptFactory.py  utils.py
samples/: basic_example_usage.py
